Added JWT auth for inserts.
