# routes/landing_route.js
@@ -11,8 +11,27 @@
 const express = require("express")
 const router = express.Router()
 
+const jsonwebtoken = require("jsonwebtoken")
+require('dotenv').config();
+
 const LandingDao = require("../DAO/landing.dao.js")
 const lDao = new LandingDao()
+
+//login route with jsonwebtoken
+router.post("/login", (req, res) => {
+    const { username, password } = req.body;
+    
+    console.log(`${username} is trying to login ..`);
+    
+    if (username === process.env.EDITOR_USER && password === process.env.EDITOR_PASSWORD) {
+        return res.json({
+        token: jsonwebtoken.sign({ user: "editor" }, process.env.JWT_SECRET),
+    });}
+
+  return res
+    .status(401)
+    .json({ message: "Usuari o contrasenya invàlids." });
+});
 
 //get all documents count by document type 
 router.get("/getNumbersByDocumentType", (req, res) => {
